added unauthorized accces exceptions handling, comments, concurrent action methods handling

--- a/FileSystemAccess/FileSystemAccess/FileSystemAccess.csproj
+++ b/FileSystemAccess/FileSystemAccess/FileSystemAccess.csproj
@@ -152,6 +152,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionFilters\ExclusiveActionAttribute.cs" />
     <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
